small code style improvement